fix: component size on mobile break

--- a/src/Components/ThemeButton/styles.module.scss
+++ b/src/Components/ThemeButton/styles.module.scss
@@ -5,7 +5,7 @@ button {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  width:max-content;
+  width: 7vw;
   height: 3vw;
   background-color: $backgroundWeak;
   color: $fontColor;
@@ -19,8 +19,9 @@ button {
     transform: scale(1.2);
   }
   @media(max-width: $break-mobile){
-    height: 7dvh;
-    border-radius: 7vw;
+    height: clamp(5vh, 15vw, 10vh);
+    width: clamp(20vw, 19vh, 30vw);
+    border-radius: min(9vw, 20vh);
     border: 1vw solid $secondaryColor;
   }
 }
@@ -67,8 +68,8 @@ h6{
   background-position: center;
   background-size: contain;
   @media(max-width: $break-mobile){
-    width: 5vw;
-    height: 5vw;
+    width: 10vw;
+    height: 10vw;
     margin: 2vw;
   }
 }
@@ -83,10 +84,11 @@ h6{
   transition: transform 0.5s ease;
   transform: translate(0vw);
   @media(max-width: $break-mobile){
-    width: 7vw;
-    height: 7vw;
-    margin: 1vw;
+    width: 10vw;
+    height: 10vw;
+    margin: 1.9vw;
     border-radius: 5vw;
+    left: -2vw;
   }
 }
 
