--- a/src/Styles/Main.scss
+++ b/src/Styles/Main.scss
@@ -139,11 +139,11 @@ p{
   pointer-events: none;
   transition: opacity 0.5 ease;
   @media (max-width: $break-mobile){
-    background-size:245%;
-    background-position-x: 40%;
+    background-size:cover;
+    background-position-x: -30vw;
     background-position-y: 0;
     height: 75dvh;
-    width: 100%;
+    width: 75vh;
   }
 }
 
